--- a/test/index.html
+++ b/test/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>AS TESTS</title>
 </head>
 <body>
-    <h1 tabindex="1">Audio Assist Test</h1>
+    <h1>Audio Assist Test</h1>
     <div id="audioAssist">
-        <button tabindex="2" id="as-init">Start TTS</button>
-        <input type="number" min="0" max="10" placeholder="Select Voice" value="4" id="voices">
-        <label for="volume">Volume</label>
-        <input type="range" name="volume" min="0" max="1" value="0.5" step="0.1" placeholder="volume" id="volume"/>
-        <label for="pitch">Pitch</label>
-        <input type="range" name="pitch" min="0.1" max="2" value="1" step="0.1" placeholder="pitch" id="pitch"/>
-        <label for="rate">Rate</label>
-        <input type="range" name="rate" min="0.1" max="2" value="1" step="0.1" placeholder="rate" id="rate"/>
+        <div class="as-item">
+            <button class="btn default" tabindex="1" id="as-init">Start TTS</button>
+        </div>
+        <div class="as-item">
+            <input type="number" min="0" max="10" placeholder="Select Voice" value="4" id="voices">
+            <label for="voices">Select voice</label>
+        </div>
+        <div class="as-item">
+            <input type="range" name="volume" min="0" max="1" value="0.5" step="0.1" placeholder="volume" id="volume"/>
+            <label for="volume">Volume</label>
+        </div>
+        <div class="as-item">
+            <input type="range" name="pitch" min="0.1" max="2" value="1" step="0.1" placeholder="pitch" id="pitch"/>
+            <label for="pitch">Pitch</label>
+        </div>
+        <div class="as-item">
+            <input type="range" name="rate" min="0.1" max="2" value="1" step="0.1" placeholder="rate" id="rate"/>
+            <label for="rate">Rate</label>
+        </div>
     </div>
-    <p tabindex="3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <form action="#" method="post">
         <div>
             <label for="nameInput">Name:</label>
